--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,8 +32,10 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  fpdart: ^1.1.0
   google_fonts: ^5.1.0
   http: ^1.1.0
+  intl: ^0.18.1
   provider: ^6.0.5
 
 dev_dependencies:
@@ -52,7 +54,6 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
   # For details regarding adding assets from package dependencies, see
